k8s/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  labels:
    app: poker-web
  name: poker-web
  namespace: default

spec:
  progressDeadlineSeconds: 600
  
  replicas: 2
  
  revisionHistoryLimit: 10
  
  selector:
    matchLabels:
      app: poker-web
  
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: poker-web
    spec:
      containers:
        - image: carlschader/poker-web-amd:latest
          name: poker-web
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
