k8s/pod.yml
apiVersion: v1

kind: Pod

metadata:
  name: poker-web
spec:
  containers:
    - image: carlschader/poker-web-amd:latest
      name: poker-web
      livenessProbe:
        httpGet:
          path: /health
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 5
        periodSeconds: 60
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /health
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 5
        failureThreshold: 3
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
