k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-web
spec:
  selector:
    app: poker-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
