k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poker-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - secretName: poker-web
    hosts:
    - riverrat.io
  rules:
  - host: riverrat.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poker-web
            port:
              number: 80
